--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
   "bugs": {
     "url": "https://github.com/freego555/challengego/issues"
   },
-  "homepage": "https://github.com/freego555/challengego#readme",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -50,10 +49,10 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-scripts": "^3.4.3"
   },
   "devDependencies": {
     "ganache-cli": "^6.9.1",
-    "truffle": "^5.1.35"
+    "truffle": "^5.1.44"
   }
 }
