--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.7.3",
     "bootstrap": "^4.4.1",
+    "moment": "^2.29.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.2.0",
